# gazebo_custom_plugin

./: README.md  actor.world
gazebo_extra_plugins/: CMakeLists.txt  package.xml
gazebo_extra_plugins/include/gazebo_plugins/: custom_actor_plugin.h
gazebo_extra_plugins/scripts/: keyboard_actor.py  keyboard_actor_pyqt.py  keyboard_teleop.py
gazebo_extra_plugins/src/: custom_actor_plugin.cpp
